--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -10,14 +10,14 @@ provisioner:
 
 # Uncomment the following verifier to leverage Inspec instead of Busser (the
 # default verifier)
-# verifier:
-#   name: inspec
-#   sudo: false
-#   format: doc
+verifier:
+  name: inspec
+  # sudo: false # if 'true' (default) inSpec will run tests as 'root', rather than 'kitchen'
+  format: doc
 
 platforms:
   - name: ubuntu-14.04
-#  - name: centos-6.5
+  # - name: centos-6.5
 
 suites:
   - name: default
