Export variable to abstract tool name/version
Add an environment variable that includes the tool's executable name
and version number, so the calling runnable can be independent of it.
Add tests to check that the recipe sets this variable (ChefSpec) and
that it carries an expected value (InSpec).
Remove some node attributes in favour of recipe local variables.
Add the magic_shell dependency.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,7 +12,7 @@ verifier:
   name: inspec
   # sudo: false # if 'true' (default) inSpec will run tests as 'root', rather than 'kitchen'
   format: doc
-  # sudo_command: '. /etc/profile;' # needed for centos
+  sudo_command: '. /etc/profile;'
 
 platforms:
   - name: ubuntu-14.04
