--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -16,7 +16,8 @@ verifier:
 
 platforms:
   - name: ubuntu-14.04
-  # - name: centos-6.5
+    driver_config:
+      instance_name: trimmomatic
 
 suites:
   - name: default
