--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .vagrant
-Berksfile.lock
 *~
 *#
 .#*
@@ -9,16 +8,15 @@ Berksfile.lock
 
 # Bundler
 Gemfile.lock
+gems.locked
 bin/*
 .bundle/*
 
+# test kitchen
 .kitchen/
 .kitchen.local.yml
 
-# OS generated files #
-######################
-.DS_Store
-Icon?
-nohup.out
-ehthumbs.db
-Thumbs.db
+# Chef
+Berksfile.lock
+.zero-knife.rb
+Policyfile.lock.json
